Atualizações nos tamanhos de fonte.

--- a/styles/style.css
+++ b/styles/style.css
@@ -77,7 +77,7 @@ body {
 }
 
 .apresentacao__conteudo__subtitulo {
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     font-family: var(--fonte-principal);
     font-weight: 400;
 }
@@ -143,6 +143,10 @@ body {
 
     .apresentacao__conteudo {
         width: auto;
+    }
+
+    .apresentacao__imagem {
+        width: 65%;
     }
     
 }
